updated gallery and main page slider

--- a/gallery-page6.html
+++ b/gallery-page6.html
@@ -66,6 +66,29 @@
       <img src="images/fencing2.jpg" alt="Image 23" class="lightbox-img">
       <img src="images/fencing3.jpg" alt="Image 24" class="lightbox-img">
       <img src="images/gate2.jpg" alt="Image 25" class="lightbox-img">
+      <img src="images/multicpatio.jpg" alt="Image 26" class="lightbox-img">
+      <img src="images/multicpatio2.jpg" alt="Image 27" class="lightbox-img">
+      <img src="images/multicpatio3.jpg" alt="Image 28" class="lightbox-img">
+      <img src="images/multicpatio4.jpg" alt="Image 29" class="lightbox-img">
+      <img src="images/multicpatio5.jpg" alt="Image 30" class="lightbox-img">
+      <img src="images/multicpatio6.jpg" alt="Image 31" class="lightbox-img">
+      <img src="images/multicpatio7.jpg" alt="Image 32" class="lightbox-img">
+      <img src="images/multicpatio8.jpg" alt="Image 33" class="lightbox-img">
+      <img src="images/gpatio.jpg" alt="Image 34" class="lightbox-img">
+      <img src="images/gpatio2.jpg" alt="Image 35" class="lightbox-img">
+      <img src="images/gpatio3.jpg" alt="Image 36" class="lightbox-img">
+      <img src="images/gpatio4.jpg" alt="Image 37" class="lightbox-img">
+      <img src="images/gpatio5.jpg" alt="Image 38" class="lightbox-img">
+      <img src="images/gpatio6.jpg" alt="Image 39" class="lightbox-img">
+      <img src="images/gpatio7.jpg" alt="Image 40" class="lightbox-img">
+      <img src="images/gpatio8.jpg" alt="Image 41" class="lightbox-img">
+
+
+
+
+
+
+
 
     
     </div>
