--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -87,6 +87,8 @@
     <img src="images/beams.jpg" alt="Image 45" class="lightbox-img">
     <img src="images/beams2.jpg" alt="Image 46" class="lightbox-img">
     <img src="images/wallbeam2.jpg" alt="Image 47" class="lightbox-img">
+    <img src="images/choppingboard.jpg" alt="Image 48" class="lightbox-img">
+    <img src="images/bespokecupboards.jpg" alt="Image 49" class="lightbox-img">
 
 
 
