--- a/gallery.html
+++ b/gallery.html
@@ -84,8 +84,8 @@
 
         <!-- Image Box 8 -->
         <a href="gallery-page9.html" class="gallery-box">
-            <img src="images/services-banner.png" alt="General-image">
-            <div class="overlay">General</div>
+            <img src="images/swimming_pool.png" alt="Specialist-image">
+            <div class="overlay">Specialist Builds</div>
         </a>
 
        
