--- a/gallery-page4.html
+++ b/gallery-page4.html
@@ -74,17 +74,16 @@
 
       
 
-      <footer class="site-footer">
-        <div class="contact-us-container">
-          <span class="contact-info">
-            <a href="tel:07794083532">📞 Alan - 07794083532</a>
-          </span>
-          <span class="contact-info">
-            <a href="mailto:a.p.t.builders@hotmail.co.uk">✉️ a.p.t.builders@hotmail.co.uk</a>
-          </span>
-        </div>
-      </footer>
-
+    <footer class="site-footer">
+      <div class="contact-us-container">
+        <span class="contact-info">
+          <a href="tel:07794083532">📞 Alan - 07794083532</a>
+        </span>
+        <span class="contact-info">
+          <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
+        </span>
+      </div>
+    </footer>
     </div>
 
       <script>
