--- a/blockpaving.html
+++ b/blockpaving.html
@@ -91,7 +91,7 @@
         <a href="tel:07794083532">📞 Alan - 07794083532</a>
       </span>
       <span class="contact-info">
-        <a href="mailto:a.p.t.builders@hotmail.co.uk">✉️ a.p.t.builders@hotmail.co.uk</a>
+        <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
       </span>
     </div>
   </footer>
