--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         <h2>Contact Us</h2>
         <p>Fill in the form below, and we'll get back to you as soon as possible.</p>
 
-        <form action="https://formsubmit.co/a.p.t.builders@hotmail.co.uk" method="POST">
+        <form action="https://formsubmit.co/alan@aptbuilders.co.uk" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
@@ -70,7 +70,7 @@
           <a href="tel:07794083532">📞 Alan - 07794083532</a>
         </span>
         <span class="contact-info">
-          <a href="mailto:a.p.t.builders@hotmail.co.uk">✉️ a.p.t.builders@hotmail.co.uk</a>
+          <a href="mailto:alan@aptbuilders.co.uk">✉️ alan@aptbuilders.co.uk</a>
         </span>
       </div>
     </footer>
