--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </div>
 
       <h2 class="bottom-header">and all general building work...</h2>
-      <h6 class="bottom-header">Any questions, please do not hesitate to contact us.</h6>
+      <h6 class="bottom-header">Any questions or for a free no obligation quote, then please do not hesitate to contact us. </h6>
       <div class="button-container">
         <a href="contact.html" class="project-button">Contact Us</a>
       </div>
