--- a/extensions.html
+++ b/extensions.html
@@ -18,31 +18,64 @@
       <p class="head-title">Extensions & Conversions Services</p>
       <nav class="burger-nav">
         <!-- burger button -->
-        <button
-          id="burgerToggle"
-          class="burger-toggle"
-          aria-label="Toggle menu"
-        >
+        <button id="burgerToggle" class="burger-toggle" aria-label="Toggle menu">
           ☰
         </button>
   
         <!-- off-canvas menu panel -->
-        <div
-          id="burgerMenu"
-          class="burger-menu"
-          aria-hidden="true"
-        >
+        <div id="burgerMenu" class="burger-menu" aria-hidden="true">
           <a href="index.html">Home</a>
-          <a href="gallery.html">Gallery</a>
-          <a href="services.html">Services</a>
+          
+          <!-- Gallery accordion -->
+          <div class="menu-item accordion">
+            <div class="accordion-header">
+              <!-- main page link -->
+              <a href="gallery.html" class="accordion-link">Gallery</a>
+              <!-- toggle only the arrow -->
+              <button class="submenu-toggle" aria-expanded="false">
+                <span class="arrow">▾</span>
+              </button>
+            </div>
+            <ul class="submenu-list">
+              <a href="gallery-page1.html">Roofing</a>
+              <a href="gallery-page2.html">Bathrooms</a>
+              <a href="gallery-page3.html">Kitchens</a>
+              <a href="gallery-page4.html">Brickwork</a>
+              <a href="gallery-page5.html">Block Paving</a>
+              <a href="gallery-page6.html">Landscaping</a>
+              <a href="gallery-page7.html">Painting & Decorating</a>
+              <a href="gallery-page8.html">Extensions</a>
+              <a href="gallery-page9.html">Specialist Builds</a>
+            </ul>
+          </div>
+          
+  
+          <!-- Services accordion -->
+          <div class="menu-item accordion">
+            <div class="accordion-header">
+              <!-- main page link -->
+              <a href="services.html" class="accordion-link">Services</a>
+              <!-- toggle only the arrow -->
+              <button class="submenu-toggle" aria-expanded="false">
+                <span class="arrow">▾</span>
+              </button>
+            </div>
+            <ul class="submenu-list">
+             <a href="roofing.html">Roofing</a>
+             <a href="bathrooms.html">Bathrooms</a>
+             <a href="kitchens.html">Kitchens</a>
+             <a href="brickwork.html">Brickwork</a>
+             <a href="blockpaving.html">Block Paving</a>
+             <a href="decorating.html">Painting & Decorating</a>
+             <a href="extensions.html">Extensions</a>
+            </ul>
+          </div>
+  
           <a href="contact.html">Contact Us</a>
         </div>
   
-        <!-- overlay: sits between page and menu -->
-        <div
-          id="menuOverlay"
-          class="menu-overlay"
-        ></div>
+        <!-- overlay: clicking here closes the menu -->
+        <div id="menuOverlay" class="menu-overlay"></div>
       </nav>
     </div>
     <section class="gallery-button-section">
@@ -135,6 +168,24 @@
     if (e.key === 'Escape' && menu.classList.contains('open')) {
       toggleMenu();
     }
+  });
+});
+
+// Add this alongside your existing toggleMenu logic
+
+// Wait until DOM is loaded
+document.addEventListener('DOMContentLoaded', () => {
+  // select all submenu toggle buttons
+  const toggles = document.querySelectorAll('.submenu-toggle');
+
+  toggles.forEach(btn => {
+    btn.addEventListener('click', () => {
+      const item = btn.closest('.accordion');
+      const isOpen = item.classList.toggle('open');
+
+      // update aria-expanded for accessibility
+      btn.setAttribute('aria-expanded', isOpen);
+    });
   });
 });
   </script>
