linked up service buttons in gallery pages

--- a/gallery-page5.html
+++ b/gallery-page5.html
@@ -145,6 +145,12 @@
       <img class="lightbox-content" id="lightbox-img" src="" alt="Enlarged image">
       <button class="lightbox-next">&#10095;</button>
     </div>
+
+    <section class="service-button">
+      <a class="gallery-ref-link" href="blockpaving.html">
+        <button class="back-to-gallery-button">Block Paving Services</button>
+      </a>
+    </section>
     
      
    
