--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -290,6 +290,12 @@
     <img class="lightbox-content" id="lightbox-img" src="" alt="Enlarged image">
     <button class="lightbox-next">&#10095;</button>
   </div> 
+
+  <section class="service-button">
+    <a class="gallery-ref-link" href="decorating.html">
+      <button class="back-to-gallery-button">Painting & Decorating Services</button>
+    </a>
+  </section>
    
 
   <footer class="site-footer">
