--- a/gallery-page8.html
+++ b/gallery-page8.html
@@ -197,6 +197,12 @@
     <img class="lightbox-content" id="lightbox-img" src="" alt="Enlarged image">
     <button class="lightbox-next">&#10095;</button>
   </div> 
+
+  <section class="service-button">
+    <a class="gallery-ref-link" href="extensions.html">
+      <button class="back-to-gallery-button">Extention & Conversion Services</button>
+    </a>
+  </section>
     
     
   <footer class="site-footer">
