--- a/gallery-page9.html
+++ b/gallery-page9.html
@@ -340,6 +340,12 @@
     <img class="lightbox-content" id="lightbox-img" src="" alt="Enlarged image">
     <button class="lightbox-next">&#10095;</button>
   </div> 
+
+  <section class="service-button">
+    <a class="gallery-ref-link" href="services.html">
+      <button class="back-to-gallery-button">View Our Services</button>
+    </a>
+  </section>
     
     
   <footer class="site-footer">
