--- a/gallery.html
+++ b/gallery.html
@@ -82,6 +82,7 @@
         </div>
       </header>
 
+   
 
 
     <div class="gallery-container">
@@ -144,6 +145,13 @@
 
 
     </div>
+  </div>
+  
+  <section class="back-to-gallery-button">
+    <a class="gallery-ref-link" href="services.html">
+      <button class="back-to-gallery-button">View Our Services</button>
+    </a>
+  </section>
 
     
 
