updated meta tags and menu font size

--- a/blockpaving.html
+++ b/blockpaving.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Block paving, driveways & pathways in Ashford, Maidstone, Folkestone, Canterbury & Kent. Durable surfaces, custom patterns & expert installation.">
+  <meta name="keywords" content="block paving, driveway installation, pathway paving, permeable paving, custom patterns, Ashford, Maidstone, Folkestone, Canterbury, Kent">
+
+
   <title>Block Paving & Driveways in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/blockpaving-banner.png" importance="high">
