--- a/brickwork.html
+++ b/brickwork.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta name="description" content="Quality brickwork services in Ashford, Maidstone, Folkestone Canterbury & Kent. New walls, repairs, pointing & restoration—built to last.">
+   <meta name="keywords" content="brickwork, bricklaying, wall building, brick repair, pointing, restoration, Ashford, Maidstone, Folkestone, Canterbury Kent">
+
   <title>Brickwork Services in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/brickwork-banner.png" importance="high">
