--- a/decorating.html
+++ b/decorating.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Professional decorating services in Ashford, Maidstone, Folkestone, Canterbury & across Kent. Interior & exterior painting, wallpapering & finishing touches.">
+  <meta name="keywords" content="decorating, painting, wallpapering, interior decorating, exterior painting, Ashford, Maidstone, Folkestone, Canterbury Kent">
+
+
   <title>Painting & Decorating in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/decorating-banner.png" importance="high">
