--- a/gallery-page5.html
+++ b/gallery-page5.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Block Paving</title>
+    <meta name="description" content="View our block paving & driveways gallery: durable patterns & pathways in Ashford, Maidstone, Folkestone & Canterbury.">
+    <meta name="keywords" content="block paving gallery, driveway projects, pathway gallery, permeable paving, Ashford, Maidstone, Folkestone, Canterbury">
+
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -89,51 +91,51 @@
    
     
     <div class="gallery lightbox-gallery">
-      <img src="images/driveway1.jpeg" alt="Driveway Image 1" class="lightbox-img">
-      <img src="images/driveway2.jpeg" alt="Driveway Image 2" class="lightbox-img">
-      <img src="images/driveway3.jpeg" alt="Driveway Image 3" class="lightbox-img">
-      <img src="images/driveway5.jpeg" alt="Driveway Image 4" class="lightbox-img">
-      <img src="images/driveway7.jpeg" alt="Driveway Image 5" class="lightbox-img">
-      <img src="images/driveway6.jpeg" alt="Driveway Image 6" class="lightbox-img">
-      <img src="images/driveway8.jpeg" alt="Driveway Image 7" class="lightbox-img">
-      <img src="images/curveddriveway.jpg" alt="Image 8" class="lightbox-img">
-      <img src="images/curveddriveway2.jpg" alt="Image 9" class="lightbox-img">
-      <img src="images/curveddriveway3.jpg" alt="Image 10" class="lightbox-img">
-      <img src="images/gardenblockpaving.jpg" alt="Image 11" class="lightbox-img">
-      <img src="images/gardenblockpaving2.jpg" alt="Image 12" class="lightbox-img">
-      <img src="images/gardenblockpaving3.jpg" alt="Image 13" class="lightbox-img">
-      <img src="images/gardenblockpaving4.jpg" alt="Image 14" class="lightbox-img">
-      <img src="images/gardenblockpaving5.jpg" alt="Image 15" class="lightbox-img">
-      <img src="images/gardenblockpaving6.jpg" alt="Image 16" class="lightbox-img">
-      <img src="images/block-drive.jpg" alt="Image 17" class="lightbox-img">
-      <img src="images/block-drive2.jpg" alt="Image 18" class="lightbox-img">
-      <img src="images/block-drive3.jpg" alt="Image 19" class="lightbox-img">
-      <img src="images/block-drive4.jpg" alt="Image 20" class="lightbox-img">
-      <img src="images/block-drive5.jpg" alt="Image 21" class="lightbox-img">
-      <img src="images/block-drive6.jpg" alt="Image 22" class="lightbox-img">
-      <img src="images/block-drive7.jpg" alt="Image 23" class="lightbox-img">
-      <img src="images/block-drive8.jpg" alt="Image 24" class="lightbox-img">
-      <img src="images/block-drive9.jpg" alt="Image 25" class="lightbox-img">
-      <img src="images/block-drive10.jpg" alt="Image 26" class="lightbox-img">
-      <img src="images/block-drive11.jpg" alt="Image 27" class="lightbox-img">
-      <img src="images/block-drive12.jpg" alt="Image 28" class="lightbox-img">
-      <img src="images/block-drive13.jpg" alt="Image 29" class="lightbox-img">
-      <img src="images/block-drive14.jpg" alt="Image 30" class="lightbox-img">
-      <img src="images/block-drive15.jpg" alt="Image 31" class="lightbox-img">
-      <img src="images/block-drive16.jpg" alt="Image 32" class="lightbox-img">
-      <img src="images/block-drive17.jpg" alt="Image 33" class="lightbox-img">
-      <img src="images/block-drive18.jpg" alt="Image 34" class="lightbox-img">
-      <img src="images/block-drive19.jpg" alt="Image 35" class="lightbox-img">
-      <img src="images/block-drive20.jpg" alt="Image 36" class="lightbox-img">
-      <img src="images/block-drive21.jpg" alt="Image 37" class="lightbox-img">
-      <img src="images/block-drive22.jpg" alt="Image 38" class="lightbox-img">
-      <img src="images/block-drive23.jpg" alt="Image 39" class="lightbox-img">
-      <img src="images/block-drive24.jpg" alt="Image 40" class="lightbox-img">
-      <img src="images/drive.jpg" alt="Image 41" class="lightbox-img">
-      <img src="images/drive2.jpg" alt="Image 42" class="lightbox-img">
-      <img src="images/drive3.jpg" alt="Image 43" class="lightbox-img">
-      <img src="images/drive4.jpg" alt="Image 44" class="lightbox-img">
-      <img src="images/drive5.jpg" alt="Image 41" class="lightbox-img">
+      <img src="images/driveway1.jpeg" alt="Driveway Blockpaving Image 1" class="lightbox-img">
+      <img src="images/driveway2.jpeg" alt="Driveway Blockpaving Image 2" class="lightbox-img">
+      <img src="images/driveway3.jpeg" alt="Driveway Blockpaving Image 3" class="lightbox-img">
+      <img src="images/driveway5.jpeg" alt="Driveway Blockpaving Image 4" class="lightbox-img">
+      <img src="images/driveway7.jpeg" alt="Driveway Blockpaving Image 5" class="lightbox-img">
+      <img src="images/driveway6.jpeg" alt="Driveway Blockpaving Image 6" class="lightbox-img">
+      <img src="images/driveway8.jpeg" alt="Driveway Blockpaving Image 7" class="lightbox-img">
+      <img src="images/curveddriveway.jpg" alt="Blockpaving Image 8" class="lightbox-img">
+      <img src="images/curveddriveway2.jpg" alt="Blockpaving Image 9" class="lightbox-img">
+      <img src="images/curveddriveway3.jpg" alt="Blockpaving Image 10" class="lightbox-img">
+      <img src="images/gardenblockpaving.jpg" alt="Blockpaving Image 11" class="lightbox-img">
+      <img src="images/gardenblockpaving2.jpg" alt="Blockpaving Image 12" class="lightbox-img">
+      <img src="images/gardenblockpaving3.jpg" alt="Blockpaving Image 13" class="lightbox-img">
+      <img src="images/gardenblockpaving4.jpg" alt="Blockpaving Image 14" class="lightbox-img">
+      <img src="images/gardenblockpaving5.jpg" alt="Blockpaving Image 15" class="lightbox-img">
+      <img src="images/gardenblockpaving6.jpg" alt="Blockpaving Image 16" class="lightbox-img">
+      <img src="images/block-drive.jpg" alt="Blockpaving Image 17" class="lightbox-img">
+      <img src="images/block-drive2.jpg" alt="Blockpaving Image 18" class="lightbox-img">
+      <img src="images/block-drive3.jpg" alt="Blockpaving Image 19" class="lightbox-img">
+      <img src="images/block-drive4.jpg" alt="Blockpaving Image 20" class="lightbox-img">
+      <img src="images/block-drive5.jpg" alt="Blockpaving Image 21" class="lightbox-img">
+      <img src="images/block-drive6.jpg" alt="Blockpaving Image 22" class="lightbox-img">
+      <img src="images/block-drive7.jpg" alt="Blockpaving Image 23" class="lightbox-img">
+      <img src="images/block-drive8.jpg" alt="Blockpaving Image 24" class="lightbox-img">
+      <img src="images/block-drive9.jpg" alt="Blockpaving Image 25" class="lightbox-img">
+      <img src="images/block-drive10.jpg" alt="Blockpaving Image 26" class="lightbox-img">
+      <img src="images/block-drive11.jpg" alt="Blockpaving Image 27" class="lightbox-img">
+      <img src="images/block-drive12.jpg" alt="Blockpaving Image 28" class="lightbox-img">
+      <img src="images/block-drive13.jpg" alt="Blockpaving Image 29" class="lightbox-img">
+      <img src="images/block-drive14.jpg" alt="Blockpaving Image 30" class="lightbox-img">
+      <img src="images/block-drive15.jpg" alt="Blockpaving Image 31" class="lightbox-img">
+      <img src="images/block-drive16.jpg" alt="Blockpaving Image 32" class="lightbox-img">
+      <img src="images/block-drive17.jpg" alt="Blockpaving Image 33" class="lightbox-img">
+      <img src="images/block-drive18.jpg" alt="Blockpaving Image 34" class="lightbox-img">
+      <img src="images/block-drive19.jpg" alt="Blockpaving Image 35" class="lightbox-img">
+      <img src="images/block-drive20.jpg" alt="Blockpaving Image 36" class="lightbox-img">
+      <img src="images/block-drive21.jpg" alt="Blockpaving Image 37" class="lightbox-img">
+      <img src="images/block-drive22.jpg" alt="Blockpaving Image 38" class="lightbox-img">
+      <img src="images/block-drive23.jpg" alt="Blockpaving Image 39" class="lightbox-img">
+      <img src="images/block-drive24.jpg" alt="Blockpaving Image 40" class="lightbox-img">
+      <img src="images/drive.jpg" alt="Blockpaving Image 41" class="lightbox-img">
+      <img src="images/drive2.jpg" alt="Blockpaving Image 42" class="lightbox-img">
+      <img src="images/drive3.jpg" alt="Blockpaving Image 43" class="lightbox-img">
+      <img src="images/drive4.jpg" alt="Blockpaving Image 44" class="lightbox-img">
+      <img src="images/drive5.jpg" alt="Blockpaving Image 41" class="lightbox-img">
 
 
     </div>
