--- a/gallery-page8.html
+++ b/gallery-page8.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore our extensions & conversions gallery: bespoke home extensions, loft & garage conversions in Ashford, Maidstone, Folkestone & Canterbury.">
+    <meta name="keywords" content="extensions gallery, conversions gallery, home extension projects, loft conversion gallery, garage conversion, Ashford, Maidstone, Folkestone, Canterbury">
+
     <title>Gallery - Extensions & Conversions</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -94,86 +97,86 @@
   
   
   <div class="gallery lightbox-gallery">
-    <img src="images/porch-build1.jpeg" alt="Image 1" class="lightbox-img">
-    <img src="images/porch-build2.jpeg" alt="Image 2" class="lightbox-img">
-    <img src="images/porch-build3.jpeg" alt="Image 3" class="lightbox-img">
-    <img src="images/porch-build4.jpeg" alt="Image 4" class="lightbox-img">
-    <img src="images/porchbuild image 4.jpg" alt="Image 5" class="lightbox-img">
-    <img src="images/porchbuild image 5.jpg" alt="Image 6" class="lightbox-img">
-    <img src="images/PD Hallway.jpg" alt="Image 7" class="lightbox-img">
-    <img src="images/kitchenextention image 1.jpg" alt="Image 8" class="lightbox-img">
-    <img src="images/kitchen extension1.jpg" alt="Image 8" class="lightbox-img">
-    <img src="images/kitchen extension2.jpg" alt="Image 9" class="lightbox-img">
-    <img src="images/kitchen extension_fitting.jpg" alt="Image 10" class="lightbox-img">
-    <img src="images/kitchen extension_fitting2.jpg" alt="Image 11" class="lightbox-img">
-    <img src="images/plasteringextension.jpg" alt="Image 12" class="lightbox-img">
-    <img src="images/plasteringextension2.jpg" alt="Image 13" class="lightbox-img">
-    <img src="images/plasteringextension3.jpg" alt="Image 14" class="lightbox-img">
-    <img src="images/plasteringextension5.jpg" alt="Image 15" class="lightbox-img">
-    <img src="images/plasteringextension4.jpg" alt="Image 16" class="lightbox-img">
-    <img src="images/insalation.jpg" alt="Image 17" class="lightbox-img">
-    <img src="images/partition-wall.jpg" alt="Image 18" class="lightbox-img">
-    <img src="images/partition-wall2.jpg" alt="Image 19" class="lightbox-img">
-    <img src="images/partition-wall3.jpg" alt="Image 20" class="lightbox-img">
-    <img src="images/partition-wall4.jpg" alt="Image 21" class="lightbox-img">
-    <img src="images/partition-wall5.jpg" alt="Image 22" class="lightbox-img">
-    <img src="images/partition-wall6.jpg" alt="Image 23" class="lightbox-img">
-    <img src="images/partition-wall7.jpg" alt="Image 24" class="lightbox-img">
-    <img src="images/partition-wall8.jpg" alt="Image 25" class="lightbox-img">
-    <img src="images/partition-wall9.jpg" alt="Image 26" class="lightbox-img">
-    <img src="images/partition-wall10.jpg" alt="Image 27" class="lightbox-img">
-    <img src="images/summer-house.jpg" alt="Image 28" class="lightbox-img">
-    <img src="images/summer-house2.jpg" alt="Image 29" class="lightbox-img">
-    <img src="images/summer-house3.jpg" alt="Image 30" class="lightbox-img">
-    <img src="images/summer-house4.jpg" alt="Image 31" class="lightbox-img">
-    <img src="images/summer-house5.jpg" alt="Image 32" class="lightbox-img">
-    <img src="images/summer-house6.jpg" alt="Image 33" class="lightbox-img">
-    <img src="images/summer-house7.jpg" alt="Image 34" class="lightbox-img">
-    <img src="images/summer-house8.jpg" alt="Image 35" class="lightbox-img">
-    <img src="images/summer-house9.jpg" alt="Image 36" class="lightbox-img">
-    <img src="images/summer-house10.jpg" alt="Image 37" class="lightbox-img">
-    <img src="images/summer-house11.jpg" alt="Image 38" class="lightbox-img">
-    <img src="images/summer-house12.jpg" alt="Image 39" class="lightbox-img">
-    <img src="images/summer-house13.jpg" alt="Image 40" class="lightbox-img">
-    <img src="images/summer-house14.jpg" alt="Image 41" class="lightbox-img">
-    <img src="images/summer-house15.jpg" alt="Image 42" class="lightbox-img">
-    <img src="images/summer-house16.jpg" alt="Image 43" class="lightbox-img">
-    <img src="images/summer-house17.jpg" alt="Image 44" class="lightbox-img">
-    <img src="images/summer-house18.jpg" alt="Image 45" class="lightbox-img">
-    <img src="images/summer-house19.jpg" alt="Image 46" class="lightbox-img">
-    <img src="images/summer-house20.jpg" alt="Image 47" class="lightbox-img">
-    <img src="images/summer-house21.jpg" alt="Image 48" class="lightbox-img">
-    <img src="images/summer-house22.jpg" alt="Image 49" class="lightbox-img">
-    <img src="images/summer-house23.jpg" alt="Image 50" class="lightbox-img">
-    <img src="images/summer-house24.jpg" alt="Image 51" class="lightbox-img">
-    <img src="images/summer-house25.jpg" alt="Image 52" class="lightbox-img">
-    <img src="images/summer-house26.jpg" alt="Image 53" class="lightbox-img">
-    <img src="images/summer-house27.jpg" alt="Image 54" class="lightbox-img">
-    <img src="images/summer-house28.jpg" alt="Image 55" class="lightbox-img">
-    <img src="images/summer-house29.jpg" alt="Image 56" class="lightbox-img">
-    <img src="images/summer-house30.jpg" alt="Image 57" class="lightbox-img">
-    <img src="images/summer-house31.jpg" alt="Image 60" class="lightbox-img">
-    <img src="images/summer-house32.jpg" alt="Image 61" class="lightbox-img">
-    <img src="images/summer-house33.jpg" alt="Image 62" class="lightbox-img">
-    <img src="images/summer-house34.jpg" alt="Image 63" class="lightbox-img">
-    <img src="images/summer-house35.jpg" alt="Image 64" class="lightbox-img">
-    <img src="images/summer-house36.jpg" alt="Image 65" class="lightbox-img">
-    <img src="images/summer-house37.jpg" alt="Image 66" class="lightbox-img">
-    <img src="images/summer-house38.jpg" alt="Image 67" class="lightbox-img">
-    <img src="images/summer-house39.jpg" alt="Image 68" class="lightbox-img">
-    <img src="images/summer-house40.jpg" alt="Image 69" class="lightbox-img">
-    <img src="images/window-fill.jpg" alt="Image 70" class="lightbox-img">
-    <img src="images/porch.jpg" alt="Image 71" class="lightbox-img">
-    <img src="images/porch2.jpg" alt="Image 72" class="lightbox-img">
-    <img src="images/porch3.jpg" alt="Image 73" class="lightbox-img">
-    <img src="images/porch5.jpg" alt="Image 74" class="lightbox-img">
-    <img src="images/porch6.jpg" alt="Image 75" class="lightbox-img">
-    <img src="images/porch7.jpg" alt="Image 76" class="lightbox-img">
-    <img src="images/porch8.jpg" alt="Image 77" class="lightbox-img">
-    <img src="images/porch9.jpg" alt="Image 78" class="lightbox-img">
-    <img src="images/porch10.jpg" alt="Image 79" class="lightbox-img">
-    <img src="images/woodjoins.jpg" alt="Image 80" class="lightbox-img">
-    <img src="images/woodjoins2.jpg" alt="Image 81" class="lightbox-img">
+    <img src="images/porch-build1.jpeg" alt="Extension Image 1" class="lightbox-img">
+    <img src="images/porch-build2.jpeg" alt="Extension Image 2" class="lightbox-img">
+    <img src="images/porch-build3.jpeg" alt="Extension Image 3" class="lightbox-img">
+    <img src="images/porch-build4.jpeg" alt="Extension Image 4" class="lightbox-img">
+    <img src="images/porchbuild image 4.jpg" alt="Extension Image 5" class="lightbox-img">
+    <img src="images/porchbuild image 5.jpg" alt="Extension Image 6" class="lightbox-img">
+    <img src="images/PD Hallway.jpg" alt="Extension Image 7" class="lightbox-img">
+    <img src="images/kitchenextention image 1.jpg" alt="Extension Image 8" class="lightbox-img">
+    <img src="images/kitchen extension1.jpg" alt="Extension Image 8" class="lightbox-img">
+    <img src="images/kitchen extension2.jpg" alt="Extension Image 9" class="lightbox-img">
+    <img src="images/kitchen extension_fitting.jpg" alt="Extension Image 10" class="lightbox-img">
+    <img src="images/kitchen extension_fitting2.jpg" alt="Extension Image 11" class="lightbox-img">
+    <img src="images/plasteringextension.jpg" alt="Extension Image 12" class="lightbox-img">
+    <img src="images/plasteringextension2.jpg" alt="Extension Image 13" class="lightbox-img">
+    <img src="images/plasteringextension3.jpg" alt="Extension Image 14" class="lightbox-img">
+    <img src="images/plasteringextension5.jpg" alt="Extension Image 15" class="lightbox-img">
+    <img src="images/plasteringextension4.jpg" alt="Extension Image 16" class="lightbox-img">
+    <img src="images/insalation.jpg" alt="Extension Image 17" class="lightbox-img">
+    <img src="images/partition-wall.jpg" alt="Extension Image 18" class="lightbox-img">
+    <img src="images/partition-wall2.jpg" alt="Extension Image 19" class="lightbox-img">
+    <img src="images/partition-wall3.jpg" alt="Extension Image 20" class="lightbox-img">
+    <img src="images/partition-wall4.jpg" alt="Extension Image 21" class="lightbox-img">
+    <img src="images/partition-wall5.jpg" alt="Extension Image 22" class="lightbox-img">
+    <img src="images/partition-wall6.jpg" alt="Extension Image 23" class="lightbox-img">
+    <img src="images/partition-wall7.jpg" alt="Extension Image 24" class="lightbox-img">
+    <img src="images/partition-wall8.jpg" alt="Extension Image 25" class="lightbox-img">
+    <img src="images/partition-wall9.jpg" alt="Extension Image 26" class="lightbox-img">
+    <img src="images/partition-wall10.jpg" alt="Extension Image 27" class="lightbox-img">
+    <img src="images/summer-house.jpg" alt="Extension Image 28" class="lightbox-img">
+    <img src="images/summer-house2.jpg" alt="Extension Image 29" class="lightbox-img">
+    <img src="images/summer-house3.jpg" alt="Extension Image 30" class="lightbox-img">
+    <img src="images/summer-house4.jpg" alt="Extension Image 31" class="lightbox-img">
+    <img src="images/summer-house5.jpg" alt="Extension Image 32" class="lightbox-img">
+    <img src="images/summer-house6.jpg" alt="Extension Image 33" class="lightbox-img">
+    <img src="images/summer-house7.jpg" alt="Extension Image 34" class="lightbox-img">
+    <img src="images/summer-house8.jpg" alt="Extension Image 35" class="lightbox-img">
+    <img src="images/summer-house9.jpg" alt="Extension Image 36" class="lightbox-img">
+    <img src="images/summer-house10.jpg" alt="Extension Image 37" class="lightbox-img">
+    <img src="images/summer-house11.jpg" alt="Extension Image 38" class="lightbox-img">
+    <img src="images/summer-house12.jpg" alt="Extension Image 39" class="lightbox-img">
+    <img src="images/summer-house13.jpg" alt="Extension Image 40" class="lightbox-img">
+    <img src="images/summer-house14.jpg" alt="Extension Image 41" class="lightbox-img">
+    <img src="images/summer-house15.jpg" alt="Extension Image 42" class="lightbox-img">
+    <img src="images/summer-house16.jpg" alt="Extension Image 43" class="lightbox-img">
+    <img src="images/summer-house17.jpg" alt="Extension Image 44" class="lightbox-img">
+    <img src="images/summer-house18.jpg" alt="Extension Image 45" class="lightbox-img">
+    <img src="images/summer-house19.jpg" alt="Extension Image 46" class="lightbox-img">
+    <img src="images/summer-house20.jpg" alt="Extension Image 47" class="lightbox-img">
+    <img src="images/summer-house21.jpg" alt="Extension Image 48" class="lightbox-img">
+    <img src="images/summer-house22.jpg" alt="Extension Image 49" class="lightbox-img">
+    <img src="images/summer-house23.jpg" alt="Extension Image 50" class="lightbox-img">
+    <img src="images/summer-house24.jpg" alt="Extension Image 51" class="lightbox-img">
+    <img src="images/summer-house25.jpg" alt="Extension Image 52" class="lightbox-img">
+    <img src="images/summer-house26.jpg" alt="Extension Image 53" class="lightbox-img">
+    <img src="images/summer-house27.jpg" alt="Extension Image 54" class="lightbox-img">
+    <img src="images/summer-house28.jpg" alt="Extension Image 55" class="lightbox-img">
+    <img src="images/summer-house29.jpg" alt="Extension Image 56" class="lightbox-img">
+    <img src="images/summer-house30.jpg" alt="Extension Image 57" class="lightbox-img">
+    <img src="images/summer-house31.jpg" alt="Extension Image 60" class="lightbox-img">
+    <img src="images/summer-house32.jpg" alt="Extension Image 61" class="lightbox-img">
+    <img src="images/summer-house33.jpg" alt="Extension Image 62" class="lightbox-img">
+    <img src="images/summer-house34.jpg" alt="Extension Image 63" class="lightbox-img">
+    <img src="images/summer-house35.jpg" alt="Extension Image 64" class="lightbox-img">
+    <img src="images/summer-house36.jpg" alt="Extension Image 65" class="lightbox-img">
+    <img src="images/summer-house37.jpg" alt="Extension Image 66" class="lightbox-img">
+    <img src="images/summer-house38.jpg" alt="Extension Image 67" class="lightbox-img">
+    <img src="images/summer-house39.jpg" alt="Extension Image 68" class="lightbox-img">
+    <img src="images/summer-house40.jpg" alt="Extension Image 69" class="lightbox-img">
+    <img src="images/window-fill.jpg" alt="Extension Image 70" class="lightbox-img">
+    <img src="images/porch.jpg" alt="Extension Image 71" class="lightbox-img">
+    <img src="images/porch2.jpg" alt="Extension Image 72" class="lightbox-img">
+    <img src="images/porch3.jpg" alt="Extension Image 73" class="lightbox-img">
+    <img src="images/porch5.jpg" alt="Extension Image 74" class="lightbox-img">
+    <img src="images/porch6.jpg" alt="Extension Image 75" class="lightbox-img">
+    <img src="images/porch7.jpg" alt="Extension Image 76" class="lightbox-img">
+    <img src="images/porch8.jpg" alt="Extension Image 77" class="lightbox-img">
+    <img src="images/porch9.jpg" alt="Extension Image 78" class="lightbox-img">
+    <img src="images/porch10.jpg" alt="Extension Image 79" class="lightbox-img">
+    <img src="images/woodjoins.jpg" alt="Extension Image 80" class="lightbox-img">
+    <img src="images/woodjoins2.jpg" alt="Extension Image 81" class="lightbox-img">
  
 
 
