--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore A.P.T. Builders’ gallery of completed projects: roofing, kitchen & bathroom fittings, landscaping, brickwork & block paving across Ashford, Maidstone, Folkestone & Canterbury.">
+    <meta name="keywords" content="builders gallery, project gallery, APT Builders, roofing projects, kitchen fitting gallery, bathroom fitting gallery, landscaping projects, brickwork, block paving, driveways, pathways, Ashford, Maidstone, Folkestone, Canterbury">
+
     <title>Gallery</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
