--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Comprehensive Kent building services from A.P.T. Builders: roofing, bathroom & kitchen fittings, landscaping, brickwork, block paving, decorating, extensions & conversions across Ashford, Maidstone, Folkestone & Canterbury.">
+  <meta name="keywords" content="building services, Kent builders, roofing, bathroom fittings, kitchen fittings, landscaping, brickwork, block paving, decorating, extensions, conversions, Ashford, Maidstone, Folkestone, Canterbury">
+
+  
   <title>A.P.T.Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/Banner%20two.jpg" importance="high" />
