--- a/landscaping.html
+++ b/landscaping.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Landscaping & groundwork experts in Ashford, Maidstone, Folkestone, Canterbury & across Kent. Patios, turfing, 
+  drainage & site preparation—beautiful results.">
+  <meta name="keywords" content="landscaping, groundwork, patio installation, turf laying, drainage, site preparation, Ashford, Maidstone, Folkestone, Canterbury Kent">
+
+
   <title>Landscaping Services in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/landscaping-banner.png" importance="high">
