--- a/services.html
+++ b/services.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Ashford, Maidstone, Folkestone, Canterbury & Kent builders: roofing, bathroom & kitchen fitting, 
+  landscaping, brickwork, block paving, decorating, extensions & conversions.">
+
+  <meta name="keywords" content="builders, roofing, bathroom fittings, kitchen fittings, landscaping, groundwork, 
+  brickwork, block paving, driveways, pathways, decorating, extensions, conversions, Ashford, Maidstone, Folkestone, Canterbury, Kent">
+
   <title>Our Services | A.P.T Builders in Kent</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/services-banner.png" importance="high">
