--- a/bathrooms.html
+++ b/bathrooms.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Expert bathroom fitting in Ashford, Maidstone, Folkestone, Canterbury & Kent. Showers, 
+  baths, tiling & plumbing—all installed to the highest standard.">
+  <meta name="keywords" content="bathroom fitting, shower installation, bath installation, tiling, plumbing, Ashford, Maidstone, Folkestone, Canterbury Kent">
+
+
   <title>Bathroom Services in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/bathroom-banner.png" importance="high">
