--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Get in touch with A.P.T. Builders—serving Ashford, Maidstone, Folkestone, Canterbury, Sevenoaks, Tunbridge Wells & all Kent. Request a quote or ask a question today.">
+   <meta name="keywords" content="contact, APT Builders, request a quote, enquiries, phone, email, Ashford, Maidstone, Folkestone, Canterbury, Sevenoaks, Tunbridge Wells, Kent">
+
+
     <title>Contact Us</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
