--- a/extensions.html
+++ b/extensions.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="House extensions & conversions in Ashford, Maidstone, Folkestone Canterbury & Kent. Bespoke designs, planning to completion—maximize your space.">
+  <meta name="keywords" content="house extension, loft conversion, garage conversion, home extension, planning & build, Ashford, Maidstone, Folkestone, Canterbury Kent">
+
+
   <title>Extensions & Conversions in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/extension-banner.png" importance="high">
