--- a/gallery-page1.html
+++ b/gallery-page1.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="View our roofing gallery: high-quality roof repairs, replacements & installations across Ashford, Maidstone, Folkestone & Canterbury.">
+    <meta name="keywords" content="roofing gallery, roof projects, roof repairs, new roofs, Ashford, Maidstone, Folkestone, Canterbury">
+
     <title>Gallery - Roofing</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -96,64 +99,64 @@
   </header>
 
     <div class="gallery lightbox-gallery">
-      <img src="images/roof-light.jpeg" alt="Image 1" class="lightbox-img">
-      <img src="images/roofimage.jpg" alt="Image 2" class="lightbox-img">
-      <img src="images/roof-build.jpg" alt="Image 3" class="lightbox-img">
-      <img src="images/roof-build2.jpg" alt="Image 4" class="lightbox-img">
-      <img src="images/roof-build3.jpg" alt="Image 5" class="lightbox-img">
-      <img src="images/roof-build4.jpg" alt="Image 6" class="lightbox-img">
-      <img src="images/roof-build5.jpg" alt="Image 7" class="lightbox-img">
-      <img src="images/roof-build6.jpg" alt="Image 8" class="lightbox-img">
-      <img src="images/roof-build7.jpg" alt="Image 9" class="lightbox-img">
-      <img src="images/roof-top.jpg" alt="Image 10" class="lightbox-img">
-      <img src="images/roof-top2.jpg" alt="Image 11" class="lightbox-img">
-      <img src="images/roof-top3.jpg" alt="Image 12" class="lightbox-img">
-      <img src="images/roof-top4.jpg" alt="Image 13" class="lightbox-img">
-      <img src="images/roof-top5.jpg" alt="Image 14" class="lightbox-img">
-      <img src="images/roof2.jpg" alt="Image 15" class="lightbox-img">
-      <img src="images/roof5.jpg" alt="Image 16" class="lightbox-img">
-      <img src="images/roof6.jpg" alt="Image 17" class="lightbox-img">
-      <img src="images/roof7.jpg" alt="Image 18" class="lightbox-img">
-      <img src="images/roof8.jpg" alt="Image 19" class="lightbox-img">
-      <img src="images/roof9.jpg" alt="Image 20" class="lightbox-img">
-      <img src="images/roof10.jpg" alt="Image 21" class="lightbox-img">
-      <img src="images/roof11.jpg" alt="Image 22" class="lightbox-img">
-      <img src="images/roof12.jpg" alt="Image 23" class="lightbox-img">
-      <img src="images/roof13.jpg" alt="Image 24" class="lightbox-img">
-      <img src="images/roof14.jpg" alt="Image 25" class="lightbox-img">
-      <img src="images/roof15.jpg" alt="Image 26" class="lightbox-img">
-      <img src="images/roof16.jpg" alt="Image 27" class="lightbox-img">
-      <img src="images/roofing.jpg" alt="Image 28" class="lightbox-img">
-      <img src="images/roofing2.jpg" alt="Image 29" class="lightbox-img">
-      <img src="images/roofing3.jpg" alt="Image 30" class="lightbox-img">
-      <img src="images/roofing4.jpg" alt="Image 31" class="lightbox-img">
-      <img src="images/roofing5.jpg" alt="Image 32" class="lightbox-img">
-      <img src="images/roofing6.jpg" alt="Image 33" class="lightbox-img">
-      <img src="images/roofing7.jpg" alt="Image 34" class="lightbox-img">
-      <img src="images/roofing8.jpg" alt="Image 35" class="lightbox-img">
-      <img src="images/roofing9.jpg" alt="Image 36" class="lightbox-img">
-      <img src="images/roofing10.jpg" alt="Image 37" class="lightbox-img">
-      <img src="images/roofing11.jpg" alt="Image 38" class="lightbox-img">
-      <img src="images/roofing12.jpg" alt="Image 39" class="lightbox-img">
-      <img src="images/roofing13.jpg" alt="Image 40" class="lightbox-img">
-      <img src="images/roofing14.jpg" alt="Image 41" class="lightbox-img">
-      <img src="images/roofing15.jpg" alt="Image 42" class="lightbox-img">
-      <img src="images/roofing16.jpg" alt="Image 43" class="lightbox-img">
-      <img src="images/outsideext78.jpg" alt="Image 44" class="lightbox-img">
-      <img src="images/outsideext79.jpg" alt="Image 45" class="lightbox-img">
-      <img src="images/outsideext80.jpg" alt="Image 46" class="lightbox-img">
-      <img src="images/outsideext81.jpg" alt="Image 47" class="lightbox-img">
-      <img src="images/outsideext82.jpg" alt="Image 48" class="lightbox-img">
-      <img src="images/outsideext83.jpg" alt="Image 49" class="lightbox-img">
-      <img src="images/outsideext84.jpg" alt="Image 50" class="lightbox-img">
-      <img src="images/outsideext85.jpg" alt="Image 51" class="lightbox-img">
-      <img src="images/outsideext88.jpg" alt="Image 52" class="lightbox-img">
-      <img src="images/outsideext89.jpg" alt="Image 53" class="lightbox-img">
-      <img src="images/outsideext96.jpg" alt="Image 54" class="lightbox-img">
-      <img src="images/outsideext98.jpg" alt="Image 55" class="lightbox-img">
-      <img src="images/outsideext99.jpg" alt="Image 56" class="lightbox-img">
-      <img src="images/kitchen-fit2.jpg" alt="Image 57" class="lightbox-img">
-      <img src="images/kitchen-fit3.jpg" alt="Image 58" class="lightbox-img">
+      <img src="images/roof-light.jpeg" alt="Roofing Image roof 1" class="lightbox-img">
+      <img src="images/roofimage.jpg" alt="Roofing Image roof 2" class="lightbox-img">
+      <img src="images/roof-build.jpg" alt="Roofing Image 3" class="lightbox-img">
+      <img src="images/roof-build2.jpg" alt="Roofing Image 4" class="lightbox-img">
+      <img src="images/roof-build3.jpg" alt="Roofing Image 5" class="lightbox-img">
+      <img src="images/roof-build4.jpg" alt="Roofing Image 6" class="lightbox-img">
+      <img src="images/roof-build5.jpg" alt="Roofing Image 7" class="lightbox-img">
+      <img src="images/roof-build6.jpg" alt="Roofing Image 8" class="lightbox-img">
+      <img src="images/roof-build7.jpg" alt="Roofing Image 9" class="lightbox-img">
+      <img src="images/roof-top.jpg" alt="Roofing Image 10" class="lightbox-img">
+      <img src="images/roof-top2.jpg" alt="Roofing Image 11" class="lightbox-img">
+      <img src="images/roof-top3.jpg" alt="Roofing Image 12" class="lightbox-img">
+      <img src="images/roof-top4.jpg" alt="Roofing Image 13" class="lightbox-img">
+      <img src="images/roof-top5.jpg" alt="Roofing Image 14" class="lightbox-img">
+      <img src="images/roof2.jpg" alt="Roofing Image 15" class="lightbox-img">
+      <img src="images/roof5.jpg" alt="Roofing Image 16" class="lightbox-img">
+      <img src="images/roof6.jpg" alt="Roofing Image 17" class="lightbox-img">
+      <img src="images/roof7.jpg" alt="Roofing Image 18" class="lightbox-img">
+      <img src="images/roof8.jpg" alt="Roofing Image 19" class="lightbox-img">
+      <img src="images/roof9.jpg" alt="Roofing Image 20" class="lightbox-img">
+      <img src="images/roof10.jpg" alt="Roofing Image 21" class="lightbox-img">
+      <img src="images/roof11.jpg" alt="Roofing Image 22" class="lightbox-img">
+      <img src="images/roof12.jpg" alt="Roofing Image 23" class="lightbox-img">
+      <img src="images/roof13.jpg" alt="Roofing Image 24" class="lightbox-img">
+      <img src="images/roof14.jpg" alt="Roofing Image 25" class="lightbox-img">
+      <img src="images/roof15.jpg" alt="Roofing Image 26" class="lightbox-img">
+      <img src="images/roof16.jpg" alt="Roofing Image 27" class="lightbox-img">
+      <img src="images/roofing.jpg" alt="Roofing Image 28" class="lightbox-img">
+      <img src="images/roofing2.jpg" alt="Roofing Image 29" class="lightbox-img">
+      <img src="images/roofing3.jpg" alt="Roofing Image 30" class="lightbox-img">
+      <img src="images/roofing4.jpg" alt="Roofing Image 31" class="lightbox-img">
+      <img src="images/roofing5.jpg" alt="Roofing Image 32" class="lightbox-img">
+      <img src="images/roofing6.jpg" alt="Roofing Image 33" class="lightbox-img">
+      <img src="images/roofing7.jpg" alt="Roofing Image 34" class="lightbox-img">
+      <img src="images/roofing8.jpg" alt="Roofing Image 35" class="lightbox-img">
+      <img src="images/roofing9.jpg" alt="Roofing Image 36" class="lightbox-img">
+      <img src="images/roofing10.jpg" alt="Roofing Image 37" class="lightbox-img">
+      <img src="images/roofing11.jpg" alt="Roofing Image 38" class="lightbox-img">
+      <img src="images/roofing12.jpg" alt="Roofing Image 39" class="lightbox-img">
+      <img src="images/roofing13.jpg" alt="Roofing Image 40" class="lightbox-img">
+      <img src="images/roofing14.jpg" alt="Roofing Image 41" class="lightbox-img">
+      <img src="images/roofing15.jpg" alt="Roofing Image 42" class="lightbox-img">
+      <img src="images/roofing16.jpg" alt="Roofing Image 43" class="lightbox-img">
+      <img src="images/outsideext78.jpg" alt="Roofing Image 44" class="lightbox-img">
+      <img src="images/outsideext79.jpg" alt="Roofing Image 45" class="lightbox-img">
+      <img src="images/outsideext80.jpg" alt="Roofing Image 46" class="lightbox-img">
+      <img src="images/outsideext81.jpg" alt="Roofing Image 47" class="lightbox-img">
+      <img src="images/outsideext82.jpg" alt="Roofing Image 48" class="lightbox-img">
+      <img src="images/outsideext83.jpg" alt="Roofing Image 49" class="lightbox-img">
+      <img src="images/outsideext84.jpg" alt="Roofing Image 50" class="lightbox-img">
+      <img src="images/outsideext85.jpg" alt="Roofing Image 51" class="lightbox-img">
+      <img src="images/outsideext88.jpg" alt="Roofing Image 52" class="lightbox-img">
+      <img src="images/outsideext89.jpg" alt="Roofing Image 53" class="lightbox-img">
+      <img src="images/outsideext96.jpg" alt="Roofing Image 54" class="lightbox-img">
+      <img src="images/outsideext98.jpg" alt="Roofing Image 55" class="lightbox-img">
+      <img src="images/outsideext99.jpg" alt="Roofing Image 56" class="lightbox-img">
+      <img src="images/kitchen-fit2.jpg" alt="Roofing Image 57" class="lightbox-img">
+      <img src="images/kitchen-fit3.jpg" alt="Roofing Image 58" class="lightbox-img">
      
 
       
