--- a/kitchens.html
+++ b/kitchens.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Custom kitchen fitting services in Ashford, Maidstone, Folkestone, Canterbury & Kent. Cabinets, worktops, 
+    appliances & plumbing—perfectly installed.">
+    <meta name="keywords" content="kitchen fitting, kitchen installation, cabinet fitting, worktop installation, plumbing, Ashford, 
+    Maidstone, Folkestone, Canterbury Kent">
+
+
   <title>Kitchen Services in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/kitchen-banner.png" importance="high">
