--- a/roofing.html
+++ b/roofing.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Professional roofing services in Ashford, Maidstone, Folkestone, Canterbury & across Kent. From repairs and replacements to new installations—durable, quality workmanship.">
+  <meta name="keywords" content="roofing, roof repair, roof replacement, new roof installation, Ashford, Maidstone, Folkestone, Canterbury, Kent builders">
+
+
   <title>Roofing Services in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/roof-banner.png" importance="high">
